[gd_scene load_steps=7 format=3 uid="uid://bnjr1k7fk1kgv"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_vgoqy"]
[ext_resource type="Texture2D" uid="uid://b14y53husqlqg" path="res://assets/menu/Window.png" id="2_ckvfk"]
[ext_resource type="Texture2D" uid="uid://canvlsgn8khb6" path="res://assets/background/background_new_latest.png" id="2_ri03t"]
[ext_resource type="AudioStream" uid="uid://curgm53ncis60" path="res://assets/music/game_over.wav" id="3_svbbm"]
[ext_resource type="FontFile" uid="uid://dq7puw6l5wn0t" path="res://assets/fonts/Stereotones.otf" id="3_ta8bn"]
[ext_resource type="Texture2D" uid="uid://dy6qrg63t3hq5" path="res://assets/menu/Table.png" id="4_ehoee"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 546.0
offset_top = 1.99999
offset_right = 660.0
offset_bottom = 200.0
scale = Vector2(1.95693, 1.95693)
script = ExtResource("1_vgoqy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(50.5894, 138.482)
scale = Vector2(0.226159, 0.226159)
texture = ExtResource("2_ckvfk")

[node name="game_over" type="Label" parent="."]
layout_mode = 0
offset_left = -27.0832
offset_top = 26.0612
offset_right = 129.917
offset_bottom = 49.0612
theme_override_fonts/font = ExtResource("3_ta8bn")
theme_override_font_sizes/font_size = 20
text = "GAME OVER"

[node name="endscore" type="Label" parent="."]
layout_mode = 0
offset_left = -8.68708
offset_top = 64.3866
offset_right = 119.313
offset_bottom = 87.3866
theme_override_fonts/font = ExtResource("3_ta8bn")
theme_override_font_sizes/font_size = 16
text = "Endscore"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -17.3741
offset_top = 88.9148
offset_right = 101.626
offset_bottom = 111.915
scale = Vector2(1.18396, 1)
theme_override_fonts/font = ExtResource("3_ta8bn")
horizontal_alignment = 1

[node name="Restart" type="TextureButton" parent="."]
layout_mode = 2
offset_left = -0.51101
offset_top = 135.927
offset_right = 360.489
offset_bottom = 236.927
scale = Vector2(0.298986, 0.298986)
texture_normal = ExtResource("4_ehoee")

[node name="restart" type="Label" parent="Restart"]
layout_mode = 0
offset_left = 47.725
offset_top = 26.5139
offset_right = 362.725
offset_bottom = 74.5139
theme_override_fonts/font = ExtResource("3_ta8bn")
theme_override_font_sizes/font_size = 42
text = "restart"

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 2
offset_left = -0.511019
offset_top = 174.253
offset_right = 360.489
offset_bottom = 275.253
scale = Vector2(0.293915, 0.293915)
texture_normal = ExtResource("4_ehoee")

[node name="quit" type="Label" parent="Quit"]
layout_mode = 0
offset_left = 113.345
offset_top = 27.3119
offset_right = 247.345
offset_bottom = 71.3119
theme_override_fonts/font = ExtResource("3_ta8bn")
theme_override_font_sizes/font_size = 44
text = "quit"

[node name="Menu" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 0.510993
offset_top = 213.089
offset_right = 361.511
offset_bottom = 314.089
scale = Vector2(0.28466, 0.309953)
texture_normal = ExtResource("4_ehoee")

[node name="menu" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 102.323
offset_top = 28.027
offset_right = 273.323
offset_bottom = 72.027
theme_override_fonts/font = ExtResource("3_ta8bn")
theme_override_font_sizes/font_size = 42
text = "MENU"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(639, 361)
rotation = 3.14159
scale = Vector2(1.01338, 1.01338)
texture = ExtResource("2_ri03t")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_svbbm")
autoplay = true

[connection signal="pressed" from="Restart" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
